--- a/student_guide.adoc
+++ b/student_guide.adoc
@@ -48,9 +48,15 @@ $ git fetch --all
 * Session 4 (link:session_04/Session_04.pdf[Slides])
 ** link:session_04/lab_07/lab_07.adoc[Lab 7 - Introspection, Monitoring, and Metrics using Spring Boot Actuator]
 * Session 5 (link:session_05/Session_05.pdf[Slides])
-** link:session_05/lab_08/lab_08.adoc[Lab 8 - Binding Spring Cloud Services]
-** link:session_05/lab_09/lab_09.adoc[Lab 9 - Service Registry]
-** link:session_05/lab_10/lab_10.adoc[Lab 10 - Config Server]
-** link:session_05/lab_11/lab_11.adoc[Lab 11 - Circuit Breaker Dashboard]
-
-
+** Lab 8 - Binding Spring Cloud Services
+*** link:session_05/lab_08/lab_08.adoc[Lab 8 - With SCS Tile]
+*** link:session_05/lab_08/lab_08_no_scs.adoc[Lab 8 - Without SCS Tile]
+** Lab 9 - Service Registry
+*** link:session_05/lab_09/lab_09.adoc[Lab 9 - With SCS Tile]
+*** link:session_05/lab_09/lab_09_no_scs.adoc[Lab 9 - Without SCS Tile]
+** Lab 10 - Config Server
+*** link:session_05/lab_10/lab_10.adoc[Lab 10 - With SCS Tile]
+*** link:session_05/lab_10/lab_10_no_scs.adoc[Lab 10 - Without SCS Tile]
+** Lab 11 - Circuit Breaker Dashboard
+*** link:session_05/lab_11/lab_11.adoc[Lab 11 - With SCS Tile]
+*** link:session_05/lab_11/lab_11_no_scs.adoc[Lab 11 - Without SCS Tile]
