Adding imports for annotations

--- a/session_03/lab_05/lab_05.adoc
+++ b/session_03/lab_05/lab_05.adoc
@@ -38,6 +38,9 @@ dependencies {
 +
 [source,java]
 ----
+import javax.persistence.*;
+import java.io.Serializable;
+
 @Entity
 @Table(name="city")
 public class City implements Serializable {
