--- a/session_05/lab_08/lab_08_no_scs.adoc
+++ b/session_05/lab_08/lab_08_no_scs.adoc
@@ -101,11 +101,11 @@ config-server       started           1/1         384M     1G     config-server-
 hystrix-dashboard   started           1/1         384M     1G     hystrix-dashboard-minuscular-jester.cf.grogscave.net   
 service-registry    started           1/1         384M     1G     service-registry-aphorismic-farmery.cf.grogscave.net   
 
-$cf cups config-server -p '{"uri":"http://config-server-unsolicited-curator.cf.grogscave.net"}'
+$cf cups config-server -p "{\"uri\":\"http://config-server-unsolicited-curator.cf.grogscave.net\"}"
 Creating user provided service config-server in org cdelashmutt-org / space development as cdelashmutt@pivotal.io...
 OK
 
-$cf cups service-registry -p '{"uri":"http://service-registry-aphorismic-farmery.cf.grogscave.net"}'
+$cf cups service-registry -p "{\"uri\":\"http://service-registry-aphorismic-farmery.cf.grogscave.net\"}"
 Creating user provided service service-registry in org cdelashmutt-org / space development as cdelashmutt@pivotal.io...
 OK
 ----
