--- a/student_guide.adoc
+++ b/student_guide.adoc
@@ -41,7 +41,7 @@ The overwhelming majority of our time will be spent engaging with the technology
 Start by downloading the course materials into a working directory for the day.  This can be accomplished either through the GitHub website and downloading a zip, or if you have Git installed, use the following commands:
 
 ----
-$ git clone https://github.com/jrolfe-pivotal/SpringCloudWorkshop
+$ git clone https://github.com/cdelashmutt-pivotal/SpringCloudWorkshop
 $ cd SpringCloudWorkshop/
 $ git fetch --all
 ----
@@ -53,29 +53,34 @@ $ git fetch --all
 10:45 AM - 11:15 AM:: *Session 2:* _Buildpacks and Services_
 11:15 AM - 12:15 PM:: *Session 3:*  _.NET on Cloud Foundry_, _Spring Data on Cloud Foundry_
 12:15 PM - 1:30 PM:: Lunch
-1:30 PM - 2:15 PM:: *Session 4:* _Spring Boot_
+1:30 PM - 2:15 PM:: *Session 4:* _CI/CD with Cloud Foundry_, _Spring Boot_
 2:15 PM - 2:30 PM:: Afternoon Break
 2:30 PM - 3:45 PM:: *Session 5:* _Spring Cloud Services on Cloud Foundry_
 3:45 PM - 4:15 PM:: Q&A, Additional Topics / Debugging / etc
 
 == Course Materials
 
-* Session 1 (link:session_01/Session_01.pdf[Slides])
+* Session 1
 ** link:session_01/lab_01/lab_01.adoc[Lab 1 - From Zero to Pushing Your First Application]
 ** link:session_01/lab_02/lab_02.adoc[Lab 2 - Binding to Cloud Foundry Services]
 ** link:session_01/lab_03/lab_03.adoc[Lab 3 - Scaling Applications]
 ** link:session_01/lab_04/lab_04.adoc[Lab 4 - Monitoring Applications]
-* Session 2 (link:session_02/Session_02.pdf[Slides])
-* Session 3 (link:session_03/session_03.pdf[Slides])
+* Session 2
+* Session 3
 ** link:session_03/lab_05/lab_05.adoc[Lab 5, Java Track - Build a Hypermedia-Driven RESTful Web Service with Spring Data REST]
 ** link:session_03/lab_06/lab_06.adoc[Lab 6, Java Track - Leveraging Spring Cloud Connectors for Service Binding]
 ** link:session_03/dotnet/lab_05/lab_05_dotnet.adoc[Lab 5, .NET Track - Deploy an ASP.NET v5 Application]
 ** link:session_03/dotnet/lab_06/lab_06_dotnet.adoc[Lab 6, .NET Track - Consuming Data Services within a .NET 4.5 Application]
-* Session 4 (link:session_04/Session_04.pdf[Slides])
+* Session 4
 ** link:session_04/lab_07/lab_07.adoc[Lab 7, Java Track - Introspection, Monitoring, and Metrics using Spring Boot Actuator]
 ** link:session_04/lab_07_alternate/lab_07_alternate.adoc[Lab 7, .NET Track - Strategies for Continuous Delivery - CI tools and Blue/Green Deployments]
-* Session 5 (link:session_05/Session_05.pdf[Slides])
-** link:session_05/lab_08/lab_08.adoc[Lab 8 - Binding Spring Cloud Services]
+* Session 5
+** link:session_05/lab_08/lab_08.adoc[Lab 8 - Getting Started with Spring Cloud Services]
 ** link:session_05/lab_09/lab_09.adoc[Lab 9 - Service Registry]
 ** link:session_05/lab_10/lab_10.adoc[Lab 10 - Config Server]
 ** link:session_05/lab_11/lab_11.adoc[Lab 11 - Circuit Breakers]
+* Alternate Session 5
+** link:session_05/lab_08/lab_08.adoc[Lab 8 - Getting Started with Cloud Services]
+** link:session_05/lab_09/lab_09_no_scs.adoc[Lab 9 - Service Registry]
+** link:session_05/lab_10/lab_10_no_scs.adoc[Lab 10 - Config Server]
+** link:session_05/lab_11/lab_11_no_scs.adoc[Lab 11 - Circuit Breakers]
