--- a/student_guide.adoc
+++ b/student_guide.adoc
@@ -38,26 +38,26 @@ $ git fetch --all
 
 == Course Materials
 
-* Session 1
+* link:session_01/Session_01.pdf[Session 1]
 ** link:session_01/lab_01/lab_01.adoc[Lab 1 - From Zero to Pushing Your First Application]
 ** link:session_01/lab_02/lab_02.adoc[Lab 2 - Binding to Cloud Foundry Services]
 ** link:session_01/lab_03/lab_03.adoc[Lab 3 - Scaling Applications]
 ** link:session_01/lab_04/lab_04.adoc[Lab 4 - Monitoring Applications]
-* Session 2
-* Session 3
+* link:session_02/Session_02.pdf[Session 2]
+* link:session_03/session_03.pdf[Session 3]
 ** link:session_03/lab_05/lab_05.adoc[Lab 5, Java Track - Build a Hypermedia-Driven RESTful Web Service with Spring Data REST]
 ** link:session_03/lab_06/lab_06.adoc[Lab 6, Java Track - Leveraging Spring Cloud Connectors for Service Binding]
 ** link:session_03/dotnet/lab_05/lab_05_dotnet.adoc[Lab 5, .NET Track - Deploy an ASP.NET v5 Application]
 ** link:session_03/dotnet/lab_06/lab_06_dotnet.adoc[Lab 6, .NET Track - Consuming Data Services within a .NET 4.5 Application]
-* Session 4
+* link:session_04/Session_04.pdf[Session 4]
 ** link:session_04/lab_07/lab_07.adoc[Lab 7, Java Track - Introspection, Monitoring, and Metrics using Spring Boot Actuator]
 ** link:session_04/lab_07_alternate/lab_07_alternate.adoc[Lab 7, .NET Track - Strategies for Continuous Delivery - CI tools and Blue/Green Deployments]
-* Session 5
+* link:session_05/Session_05.pdf[Session 5]
 ** link:session_05/lab_08/lab_08.adoc[Lab 8 - Getting Started with Spring Cloud Services]
 ** link:session_05/lab_09/lab_09.adoc[Lab 9 - Service Registry]
 ** link:session_05/lab_10/lab_10.adoc[Lab 10 - Config Server]
 ** link:session_05/lab_11/lab_11.adoc[Lab 11 - Circuit Breakers]
-* Alternate Session 5
+* Alternate link:session_05/Session_05.pdf[Session 5]
 ** link:session_05/lab_08/lab_08.adoc[Lab 8 - Getting Started with Cloud Services]
 ** link:session_05/lab_09/lab_09_no_scs.adoc[Lab 9 - Service Registry]
 ** link:session_05/lab_10/lab_10_no_scs.adoc[Lab 10 - Config Server]
