--- a/session_01/lab_01/lab_01.adoc
+++ b/session_01/lab_01/lab_01.adoc
@@ -4,12 +4,12 @@
 
 . If you haven't already, download the latest release of the Cloud Foundry CLI from https://github.com/cloudfoundry/cli/releases for your operating system and install it.
 
-. Use information from your instructor to log on to Pivotal Cloud Foundry.
+. Go to the https://drive.google.com/open?id=1imK3lLq8A4cc440RVM1-9zkDu4ClobLJpnHnsBpqmpk[user info spreadsheet] and assign yourself a Pivotal Cloud Foundry user for the workshop.		
 
 . From a command prompt, set the API target for the CLI:
 +
 ----
-$ cf api https://api.run.pivotal.io
+$ cf api https://api.run.haas-74.pez.pivotal.io --skip-ssl-validation
 ----
 
 . Login to Pivotal Cloud Foundry:
