--- a/session_05/lab_08/lab_08.adoc
+++ b/session_05/lab_08/lab_08.adoc
@@ -326,3 +326,4 @@ buildpack: java-buildpack=v3.3.1-offline-https://github.com/cloudfoundry/java-bu
 
 image::/../../Common/images/lab8screenshot4.png[]
 
+link:/README.md#course-materials[Course Materials home] | link:/session_04/lab_07/lab_07.adoc[Lab 7 - Introspection, Monitoring, and Metrics using Spring Boot Actuator] | link:/session_05/lab_09/lab_09.adoc[Lab 9 - Service Registry]
