--- a/session_05/lab_10/lab_10.adoc
+++ b/session_05/lab_10/lab_10.adoc
@@ -107,3 +107,5 @@ image::../../Common/images/lab10screenshot2.png[]
 . Visit the Fortune UI once again and see your configuration value on the page.
 +
 image::../../Common/images/lab10screenshot3.png[]
+
+link:/README.md#course-materials[Course Materials home] | link:/session_05/lab_09/lab_09.adoc[Lab 9 - Service Registry] | link:/session_05/lab_11/lab_11.adoc[Lab 11 - Circuit Breaker Dashboard]
