--- a/session_01/lab_04/lab_04.adoc
+++ b/session_01/lab_04/lab_04.adoc
@@ -315,4 +315,5 @@ Deleting service cf-scale-boot-logs in org oreilly-class / space instructor as m
 OK
 ----
 
-link:/README.md#course-materials[Course Materials home] | link:/session_01/lab_03/lab_03.adoc[Lab 3 - Scaling Applications] | link:/session_03/lab_05/lab_05.adoc[Lab 5 - Build a Hypermedia-Driven RESTful Web Service with Spring Data REST]
+link:/README.md#course-materials[Course Materials home] | link:/session_01/lab_03/lab_03.adoc[Lab 3 - Scaling Applications] | link:/session_02_b/lab_05/lab_05.adoc[Spring Boot - From Zero to Microservice in Five Minutes] 
+
