--- a/session_01/lab_04/lab_04.adoc
+++ b/session_01/lab_04/lab_04.adoc
@@ -5,6 +5,22 @@ Cloud Foundry provides several built-in mechanisms that allow us to monitor our 
 Additionally, Cloud Foundry actively monitors the health of our application processes and will restart them should they crash.
 In this lab, we'll explore a few of these mechanisms.
 
+== PCF Metrics
+
+PCF Metrics is an application monitoring dashboard that provides up-to-date information on the health of your application.
+
+. Navigate to https://metrics.run.haas-74.pez.pivotal.io/ to see the dashboard.
++
+image::../../Common/images/PCF-Metrics-1.png[]
+
+. Click in the application search bar and select your application to see more details
++
+image::../../Common/images/PCF-Metrics-2.png[]
+
+. Click on the switches on the left hand side to see application events and container metrics as well.
++
+image::../../Common/images/PCF-Metrics-3.png[]
+
 == Events
 
 Cloud Foundry only allows application configuration to be modified via its API.
