--- a/session_05/lab_10/lab_10.adoc
+++ b/session_05/lab_10/lab_10.adoc
@@ -70,12 +70,12 @@ image::../../Common/images/github_2.png[]
 image::../../Common/images/github_3.png[]
 +
 ----
-$ git remote add origin https://github.com/mstine/springbox-config-repo.git
+$ git remote add origin https://github.com/<your-account>/springbox-config-repo.git
 $ git push -u origin master
 Counting objects: 3, done.
 Writing objects: 100% (3/3), 229 bytes | 0 bytes/s, done.
 Total 3 (delta 0), reused 0 (delta 0)
-To https://github.com/mstine/springbox-config-repo.git
+To https://github.com/<your-account>/springbox-config-repo.git
  * [new branch]      master -> master
 Branch master set up to track remote branch master from origin.
 ----
@@ -88,7 +88,7 @@ image::../../Common/images/lab10screenshot1.png[]
 . Create a new config server instance that points to your new Git repository
 +
 ----
-$cf create-service p-config-server standard new-config-server -c '{"git": { "uri": "<Your-Git-Repository>", "searchPaths": "configuration" } }'
+$cf create-service p-config-server standard new-config-server -c '{"git": { "uri": "<Your-Git-Repository>" } }'
 Creating service instance new-config-server in org student20-org / space development as student20...
 OK
 ----
