--- a/session_05/lab_10/lab_10.adoc
+++ b/session_05/lab_10/lab_10.adoc
@@ -5,7 +5,7 @@
 . Change to the lab directory:
 +
 ----
-$ cd $COURSE_HOME/session_05/lab_10/
+$ cd $COURSE_HOME/session_05/lab_10
 ----
 
 . Create a directory for the configuration repo:
@@ -57,7 +57,7 @@ eureka:
 git add . && git commit -m "initial commit"
 ----
 
-. Make sure you're logged in to your GitHub account, and create a new repository:
+. Make sure you're logged in to your GitHub account, and create a new repository called "config-repo":
 +
 image::../../Common/images/github_1.png[]
 
@@ -70,7 +70,7 @@ image::../../Common/images/github_2.png[]
 image::../../Common/images/github_3.png[]
 +
 ----
-$ git remote add origin https://github.com/<your-account>/springbox-config-repo.git
+$ git remote add origin https://github.com/<your-account>/config-repo.git
 $ git push -u origin master
 Counting objects: 3, done.
 Writing objects: 100% (3/3), 229 bytes | 0 bytes/s, done.
@@ -88,7 +88,7 @@ image::../../Common/images/lab10screenshot1.png[]
 . Create a new config server instance that points to your new Git repository
 +
 ----
-$cf create-service p-config-server standard new-config-server -c '{"git": { "uri": "<Your-Git-Repository>" } }'
+$cf create-service p-config-server standard new-config-server -c '{"git": { "uri": "<Your-Git-Repository-URL>" } }'
 Creating service instance new-config-server in org student20-org / space development as student20...
 OK
 ----
